Ner and pos indexes now use full-value keys. E.g PERSON#reagan, rather than using a synonym array